--- a/src/com/raven/form/Setting_Form.form
+++ b/src/com/raven/form/Setting_Form.form
@@ -43,6 +43,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Presione aqui"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
