--- a/src/com/raven/crud/ProductosAgregarBaseDatos.form
+++ b/src/com/raven/crud/ProductosAgregarBaseDatos.form
@@ -21,22 +21,31 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel12" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel13" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jLabel10" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel11" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel5" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel6" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel1" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel7" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel8" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                  <Component id="jLabel14" alignment="0" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel12" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel13" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLabel10" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel11" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel5" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel6" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel1" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel7" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel2" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel8" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                          <Component id="jLabel14" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="jTextFieldID" min="-2" pref="13" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jTextFieldContenido" alignment="0" max="32767" attributes="0"/>
                   <Component id="jFormattedTextFieldFecha" alignment="0" max="32767" attributes="0"/>
@@ -115,9 +124,14 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                      <Component id="jTextFieldID" min="-2" pref="12" max="-2" attributes="0"/>
+                  </Group>
                   <Component id="jScrollPane1" min="-2" pref="60" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -336,5 +350,10 @@
         </Container>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JTextField" name="jTextFieldID">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jTextField1"/>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
