--- a/src/com/raven/form/Usuarios_Form.form
+++ b/src/com/raven/form/Usuarios_Form.form
@@ -220,6 +220,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="PDF Tabla"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPDFTablaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
